<resources>
    <string name="app_name">Never Have I Ever</string>
    <string name="id_Ads">ca-app-pub-3940256099942544/6300978111</string>
    <string name="button_start">Start</string>
    <string name="button_next">Next</string>
    <string name="dialog_title">Give some feedback?</string>
    <string name="dialog_message">We are sure other people will value your opinion</string>
    <string name="dialog_button_no"><u>Don\'t ask again</u></string>
    <string name="dialog_button_ok">Sure, I will</string>
    <string name="ImageDescriptionGlass">Glass</string>
    <string name="ImageDescriptionBackground">Background</string>
</resources>
